[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemies/Boss.gd" type="Script" id=1]
[ext_resource path="res://assets/enemies/boss1.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/boss2.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/boss_dead1.png" type="Texture" id=4]
[ext_resource path="res://assets/enemies/boss_dead2.png" type="Texture" id=5]
[ext_resource path="res://assets/enemies/boss4.png" type="Texture" id=6]
[ext_resource path="res://assets/enemies/boss5.png" type="Texture" id=7]
[ext_resource path="res://assets/enemies/boss6.png" type="Texture" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 21.766, -16.3245, -21.766, 16.3245, 0, 0, 115.632, 89.7848, -115.632, -89.7848, -434.613, 141.753, -121.073, 17.6849, 121.073, -17.6849, -36.807, -313.469, 21.4458, -24.764, -21.4458, 24.764, 0, 0, 43.9522, 14.0647, -43.9522, -14.0647, -278.139, 103.214, -70.3235, -360.408, 70.3235, 360.408, -559.434, -46.2239, -59.775, 45.7103, 59.775, -45.7103, -213.09, -171.048, -58.0169, -63.2912, 58.0169, 63.2912, -12.668, -207.968, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -444.13, -186.99, 1.62901, 5.70154, -1.62901, -5.70154, -501.659, -212.945, -35.8383, 61.9025, 35.8383, -61.9025, -544.828, -317.202, -47.2414, -10.5886, 47.2414, 10.5886, -411.249, -322.903, -4.07253, -87.9667, 4.07253, 87.9667, -342.016, -239.824, -30.1367, -40.7253, 30.1367, 40.7253, -444.13, -114.99, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 8 ) ],
"loop": true,
"name": "boss_battle",
"speed": 5.0
} ]

[node name="Boss" type="Path2D"]
curve = SubResource( 1 )
script = ExtResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="."]
offset = 4916.23
rotate = false

[node name="Sprite" type="AnimatedSprite" parent="PathFollow2D"]
frames = SubResource( 2 )
speed_scale = 0.25
playing = true

[node name="Head1" type="Area2D" parent="PathFollow2D/Sprite"]
collision_layer = 262145

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PathFollow2D/Sprite/Head1"]
polygon = PoolVector2Array( -150.237, -183.585, -152.938, -152.244, -148.615, -116.04, -127.541, -83.6183, -105.387, -64.1653, -77.8282, -57.681, -45.947, -58.2213, -32.438, -69.5689, -20.0097, -93.3448, -16.2271, -114.959, -15.6868, -138.195, -28.6554, -161.971, -40.003, -180.883, -45.4066, -195.473, -109.71, -215.466 )

[node name="Head2" type="Area2D" parent="PathFollow2D/Sprite"]
collision_layer = 262145

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PathFollow2D/Sprite/Head2"]
polygon = PoolVector2Array( -33.8794, -197.499, -11.8791, -187.47, -0.231842, -172.264, 8.18005, -153.175, 10.4448, -131.499, 5.26823, -100.439, 3.97411, -83.292, -8.96725, -74.8801, -32.9088, -65.4976, -49.0854, -68.733, -65.9092, -73.2625, -80.7918, -89.4391, -91.4684, -100.116, -104.733, -126.646, -109.263, -156.734, -109.91, -181.97, -101.174, -203.647, -42.2912, -208.823 )

[node name="Timer1" type="Timer" parent="PathFollow2D/Sprite"]
wait_time = 1.25

[node name="Sprite2" type="AnimatedSprite" parent="PathFollow2D"]
visible = false
frames = SubResource( 3 )
animation = "dead"
speed_scale = 0.25

[node name="Middle" type="Area2D" parent="PathFollow2D/Sprite2"]
collision_layer = 524289

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PathFollow2D/Sprite2/Middle"]
polygon = PoolVector2Array( 75.1683, -19.8633, 75.1683, 55.5035, 25.89, 58.6658, 3.22726, 33.1043, -4.15131, 6.48875, -6.25948, -6.42374, 26.4171, -20.3903 )

[node name="Timer2" type="Timer" parent="PathFollow2D/Sprite2"]
wait_time = 0.75
[connection signal="timeout" from="PathFollow2D/Sprite/Timer1" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="PathFollow2D/Sprite2/Timer2" to="." method="_on_Timer2_timeout"]
